Fixed some styling related to the filter panel collapse button

--- a/style/browse.css
+++ b/style/browse.css
@@ -1,7 +1,3 @@
-body {
-    width: auto;
-}
-
 main {
     display: flex;
     height: calc(100vh - var(--header-height));
